Fix: mudanças do z-index no geral

--- a/src/app/casino/gameview/gameview.component.css
+++ b/src/app/casino/gameview/gameview.component.css
@@ -2,7 +2,8 @@
     display: flex;
     flex-wrap: wrap;
     width: 100%;
-
+    position: fixed;
+    z-index: 2147483647;
 }
 
 .aviso h4{
@@ -141,7 +142,7 @@ iframe{
         background-color: #000;
         width: 100%;
         height: 100%;
-        z-index: 10000;
+        z-index: 2147483647;
         top: 0;
     }
 
